test/classes/bradc/syncAsClass2.good
syncAsClass2.chpl:5: error: Cannot assign to borrowed object? from _syncvar(int(64))
